Corrected and separated Text

--- a/nutrition_facts.html
+++ b/nutrition_facts.html
@@ -7,13 +7,79 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-
-	<p>Nutrition Facts 
-Serving Size 1 cup (50:1) Servings Per Container 10 Amount Per serving Cereal with 1/2 orpl% we Calories 190 250 Calories from Fat 35 45 %Daily Vier Total Fat 42• 6% 8% Saturated Fat 1.5g 8% 13% Trans Fat Og Cholesterol 0mg 0% 3% Sodium 190mg 8% 11% Total Carbohydrate 39g 13% 15% Ochry Fiber 6g 24% 24% Sugars 11g Protein 4g Vitamin A 0% 6% Vitamin C 0% 2% Calcium Iran 2% 15% 6% 6% 
-'AmouM In Cereal. with 112 cup 1% mot ccanoutes an acids:nu 60 calcoes (10 canes torn Fat). 1 g Wd Fat (1 g Saturated Fat). 10 mg cncresterm. 70 mg Sotto. 7 g Weal cartonysate m 9 sugarm. 5 9 Proem "Percent Daily Values are oases on a 2.000 calorie 'four say woes may be nigher or lower depending on your calm'. needs: 
-Canes: 2.CO0 2930  Total Fat Less than 65g 809 Saturated Fat Less Man 209 25g CncIestero■ Less than worm 300mg Sodium Less than 2400mg 2Aoorng nal Carbandrate wog 3759 Dray Mbar 259 309  Cakcies per gram: Fat 9 • carbons:me a • Frown 4 
-</p>
-	
+	<header>
+		<h1>Nutrition Facts</h1>
+	</header>
+	<div>
+		Serving Size 1 cup (50:1)
+		<br>
+		Servings Per Container 10
+	</div>
+	<div>
+		Amount Per serving
+		<br>
+		Cereal
+		<br>
+		with 1/2 cup 1% milk
+		<br>
+		Calories 190 250
+		<br>
+		Calories from Fat 35 45
+		<br>
+	</div>
+	<div>
+		%Daily Value**
+		<br>
+		Total Fat 4g* 6% 8%
+		<br>
+		Saturated Fat 1.5g 8% 13%
+		<br>
+		Trans Fat Og
+		<br>
+		Cholesterol 0mg 0% 3%
+		<br>
+		Sodium 190mg 8% 11%
+		<br>
+		Total Carbohydrate 39g 13% 15%
+		<br>
+		Dietary Fiber 6g 24% 24%
+		<br>
+		Sugars 11g
+		<br>
+		Protein 4g
+	</div>
+	<div>
+		Vitamin A 0% 6%
+		<br>
+		Vitamin C 0% 2%
+		<br>
+		Calcium 2% 15%
+		<br>
+		Iron 6% 6%
+	</div>
+	<div>
+		**Amount In Cereal. with 1/2 cup 1% milk contributes an additional 60 Calories (10 Calories from Fat), 1 g Total Fat (1 g Saturated Fat), 10 mg Cholesterol, 70 mg Sodium, 7 g Total Carbonhydrate (6g Sugars), 5 g Protein.
+		**Percent Daily Values are based on a 2.000 calorie diet.
+		Your daily values may be higher or lower depending on your calorie needs:
+	</div>
+	<div>
+		Calories: 2.000 2.500
+		<br>
+		Total Fat Less than 65g 80g
+		<br>
+		Saturated Fat Less Man 20g 25g
+		<br>
+		Cholesterol Less than 300mg 300mg
+		<br>
+		Sodium Less than 2.400mg 2.400mg
+		<br>
+		Total Carbonhydrate 300g 375g
+		<br>
+		Dietary Fiber 25g 30g
+		<br>
+		Calories per gram:
+		<br>
+		Fat 9 Carbonhydrate 4 Protein 4
+	</div>
 </body>
 </html>
