first steps with flexbox - imediateEx

--- a/nutrition_facts.html
+++ b/nutrition_facts.html
@@ -15,18 +15,39 @@
 		<br>
 		Servings Per Container 10
 	</div>
-	<div>
-		Amount Per serving
-		<br>
-		Cereal
-		<br>
-		with 1/2 cup 1% milk
-		<br>
-		Calories 190 250
-		<br>
-		Calories from Fat 35 45
-		<br>
+	<hr class="bold_hr">
+	<div id="test">
+		<div class="first_col">
+			Amount Per serving
+		</div>
+		<div class="second_col">
+			Cereal
+		</div>
+		<div class="third_col">
+			with 1/2<br>cup 1%<br>milk
+		</div>
+		<hr>
+		<div class="first_col">
+			Calories
+		</div>
+		<div class="second_col">
+			190
+		</div>
+		<div class="third_col">
+			250
+		</div>
+		<hr>
+		<div class="first_col">
+			Calories from Fat
+		</div>
+		<div class="second_col">
+			35
+		</div>
+		<div class="third_col">
+			45
+		</div>
 	</div>
+		<hr class="medium_hr">
 	<div>
 		%Daily Value**
 		<br>
@@ -48,6 +69,7 @@
 		<br>
 		Protein 4g
 	</div>
+		<hr class="bold_hr">
 	<div>
 		Vitamin A 0% 6%
 		<br>
