--- a/nutrition_facts.html
+++ b/nutrition_facts.html
@@ -17,67 +17,82 @@
 	</div>
 	<hr class="bold_hr">
 	<div id="test">
-		<div class="first_col">
-			Amount Per serving
-		</div>
-		<div class="second_col">
-			Cereal
-		</div>
-		<div class="third_col">
-			with 1/2<br>cup 1%<br>milk
-		</div>
+		<div class="first_col">Amount Per serving</div>
+		<div class="second_col">Cereal</div>
+		<div class="third_col">with 1/2<br>cup 1%<br>milk</div>
 		<hr>
-		<div class="first_col">
-			Calories
-		</div>
-		<div class="second_col">
-			190
-		</div>
-		<div class="third_col">
-			250
-		</div>
+		<div class="first_col">Calories</div>
+		<div class="second_col">190</div>
+		<div class="third_col">250</div>
+
 		<hr>
-		<div class="first_col">
-			Calories from Fat
-		</div>
-		<div class="second_col">
-			35
-		</div>
-		<div class="third_col">
-			45
-		</div>
-	</div>
+		<div class="first_col">Calories from Fat</div>
+		<div class="second_col">35</div>
+		<div class="third_col">45</div>
+
 		<hr class="medium_hr">
-	<div>
-		%Daily Value**
-		<br>
-		Total Fat 4g* 6% 8%
-		<br>
-		Saturated Fat 1.5g 8% 13%
-		<br>
-		Trans Fat Og
-		<br>
-		Cholesterol 0mg 0% 3%
-		<br>
-		Sodium 190mg 8% 11%
-		<br>
-		Total Carbohydrate 39g 13% 15%
-		<br>
-		Dietary Fiber 6g 24% 24%
-		<br>
-		Sugars 11g
-		<br>
-		Protein 4g
-	</div>
+		<div class="first_col"></div>
+		<div class="second_col"></div>
+		<div class="third_col">%Daily Value**</div>	
+
+		<div class="first_col">Total Fat 4g*</div>
+		<div class="second_col">6%</div>
+		<div class="third_col">8%</div>
+
+		<div class="first_col">Saturated Fat 1.5g</div>
+		<div class="second_col">8%</div>
+		<div class="third_col">13%</div>
+
+		<div class="first_col">Trans Fat Og</div>
+		<div class="second_col"></div>
+		<div class="third_col"></div>
+
+		<div class="first_col">Cholesterol 0mg</div>
+		<div class="second_col">0%</div>
+		<div class="third_col">3%</div>
+
+		<div class="first_col">Sodium 190mg</div>
+		<div class="second_col">8%</div>
+		<div class="third_col">11%</div>
+
+		<div class="first_col">Total Carbohydrate 39g</div>
+		<div class="second_col">13%</div>
+		<div class="third_col">15%</div>
+
+		<div class="first_col">Dietary Fiber 6g</div>
+		<div class="second_col">24%</div>
+		<div class="third_col">24%</div>
+
+		<div class="first_col">Sugars 11g</div>
+		<div class="second_col"></div>
+		<div class="third_col"></div>
+
+		<div class="first_col">Protein 4g</div>
+		<div class="second_col"></div>
+		<div class="third_col"></div>
+
+		<div class="first_col">Vitamin A</div>
+		<div class="second_col">0%</div>
+		<div class="third_col">6%</div>
+
+		<div class="first_col">Vitamin C</div>
+		<div class="second_col">0%</div>
+		<div class="third_col">2%</div>
+
+		<div class="first_col">Calcium</div>
+		<div class="second_col">2%</div>
+		<div class="third_col">15%</div>
+		
+		<div class="first_col">Iron</div>
+		<div class="second_col">6%</div>
+		<div class="third_col">6%</div>
+
 		<hr class="bold_hr">
-	<div>
-		Vitamin A 0% 6%
-		<br>
-		Vitamin C 0% 2%
-		<br>
-		Calcium 2% 15%
-		<br>
-		Iron 6% 6%
+
+
+
+
+
 	</div>
 	<div>
 		**Amount In Cereal. with 1/2 cup 1% milk contributes an additional 60 Calories (10 Calories from Fat), 1 g Total Fat (1 g Saturated Fat), 10 mg Cholesterol, 70 mg Sodium, 7 g Total Carbonhydrate (6g Sugars), 5 g Protein.
