--- a/nutrition_facts.html
+++ b/nutrition_facts.html
@@ -17,20 +17,21 @@
 	</div>
 	<hr class="bold_hr">
 	<div id="test">
-		<div class="first_col">Amount Per serving</div>
-		<div class="second_col">Cereal</div>
-		<div class="third_col">with 1/2<br>cup 1%<br>milk</div>
-		<hr>
+		<div class="title" class="first_col"><br><br>Amount Per serving</div>
+		<div class="title" class="second_col"><br><br>Cereal</div>
+		<div class="title" class="third_col">with 1/2<br>cup 1%<br>milk</div>
+		<dir class="h_line"><hr></dir>
 		<div class="first_col">Calories</div>
 		<div class="second_col">190</div>
 		<div class="third_col">250</div>
+		<dir class="h_line"><hr></dir>
 
-		<hr>
 		<div class="first_col">Calories from Fat</div>
 		<div class="second_col">35</div>
 		<div class="third_col">45</div>
+		<div class="h_line"><hr class="medium_hr"></div>
 
-		<hr class="medium_hr">
+
 		<div class="first_col"></div>
 		<div class="second_col"></div>
 		<div class="third_col">%Daily Value**</div>	
@@ -82,7 +83,7 @@
 		<div class="first_col">Calcium</div>
 		<div class="second_col">2%</div>
 		<div class="third_col">15%</div>
-		
+
 		<div class="first_col">Iron</div>
 		<div class="second_col">6%</div>
 		<div class="third_col">6%</div>
