--- a/nutrition_facts.html
+++ b/nutrition_facts.html
@@ -17,9 +17,9 @@
 	</div>
 	<hr class="bold_hr">
 	<div id="test">
-		<div class="title" class="first_col"><br><br>Amount Per serving</div>
-		<div class="title" class="second_col"><br><br>Cereal</div>
-		<div class="title" class="third_col">with 1/2<br>cup 1%<br>milk</div>
+		<div id="title" class="first_col"><br><br>Amount Per serving</div>
+		<div id="title1" class="second_col"><br><br>Cereal</div>
+		<div id="title1" class="third_col">with 1/2<br>cup 1%<br>milk</div>
 		<dir class="h_line"><hr></dir>
 		<div class="first_col">Calories</div>
 		<div class="second_col">190</div>
@@ -33,12 +33,14 @@
 
 
 		<div class="first_col"></div>
-		<div class="second_col"></div>
-		<div class="third_col">%Daily Value**</div>	
+	
+		<div id="title2" class="third_col">%Daily Value**</div>	
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Total Fat 4g*</div>
 		<div class="second_col">6%</div>
 		<div class="third_col">8%</div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Saturated Fat 1.5g</div>
 		<div class="second_col">8%</div>
@@ -47,49 +49,57 @@
 		<div class="first_col">Trans Fat Og</div>
 		<div class="second_col"></div>
 		<div class="third_col"></div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Cholesterol 0mg</div>
 		<div class="second_col">0%</div>
 		<div class="third_col">3%</div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Sodium 190mg</div>
 		<div class="second_col">8%</div>
 		<div class="third_col">11%</div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Total Carbohydrate 39g</div>
 		<div class="second_col">13%</div>
 		<div class="third_col">15%</div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Dietary Fiber 6g</div>
 		<div class="second_col">24%</div>
 		<div class="third_col">24%</div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Sugars 11g</div>
 		<div class="second_col"></div>
 		<div class="third_col"></div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Protein 4g</div>
 		<div class="second_col"></div>
 		<div class="third_col"></div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Vitamin A</div>
 		<div class="second_col">0%</div>
 		<div class="third_col">6%</div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Vitamin C</div>
 		<div class="second_col">0%</div>
 		<div class="third_col">2%</div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Calcium</div>
 		<div class="second_col">2%</div>
 		<div class="third_col">15%</div>
+		<dir class="h_line"><hr></dir>
 
 		<div class="first_col">Iron</div>
 		<div class="second_col">6%</div>
 		<div class="third_col">6%</div>
-
-		<hr class="bold_hr">
-
+		<dir class="h_line"><hr class="bold_hr"></dir>
 
 
 
