--- a/nutrition_facts.html
+++ b/nutrition_facts.html
@@ -7,24 +7,21 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<header>
-		<h1>Nutrition Facts</h1>
-	</header>
-	<div>
+	<div id="flex_container">
+		<div class="header"><h1>Nutrition Facts</h1>
 		Serving Size 1 cup (50:1)
 		<br>
 		Servings Per Container 10
-	</div>
-	<hr class="bold_hr">
-	<div id="test">
+		</div>
+		<div class="h_line"><hr class="bold_hr"></div>		
 		<div id="title" class="first_col"><br><br>Amount Per serving</div>
 		<div id="title1" class="second_col"><br><br>Cereal</div>
 		<div id="title1" class="third_col">with 1/2<br>cup 1%<br>milk</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 		<div class="first_col">Calories</div>
 		<div class="second_col">190</div>
 		<div class="third_col">250</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Calories from Fat</div>
 		<div class="second_col">35</div>
@@ -35,12 +32,12 @@
 		<div class="first_col"></div>
 	
 		<div id="title2" class="third_col">%Daily Value**</div>	
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Total Fat 4g*</div>
 		<div class="second_col">6%</div>
 		<div class="third_col">8%</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Saturated Fat 1.5g</div>
 		<div class="second_col">8%</div>
@@ -49,27 +46,27 @@
 		<div class="first_col">Trans Fat Og</div>
 		<div class="second_col"></div>
 		<div class="third_col"></div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Cholesterol 0mg</div>
 		<div class="second_col">0%</div>
 		<div class="third_col">3%</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Sodium 190mg</div>
 		<div class="second_col">8%</div>
 		<div class="third_col">11%</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Total Carbohydrate 39g</div>
 		<div class="second_col">13%</div>
 		<div class="third_col">15%</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Dietary Fiber 6g</div>
 		<div class="second_col">24%</div>
 		<div class="third_col">24%</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Sugars 11g</div>
 		<div class="second_col"></div>
@@ -79,38 +76,35 @@
 		<div class="first_col">Protein 4g</div>
 		<div class="second_col"></div>
 		<div class="third_col"></div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr class="bold_hr"></div>
 
 		<div class="first_col">Vitamin A</div>
 		<div class="second_col">0%</div>
 		<div class="third_col">6%</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Vitamin C</div>
 		<div class="second_col">0%</div>
 		<div class="third_col">2%</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Calcium</div>
 		<div class="second_col">2%</div>
 		<div class="third_col">15%</div>
-		<dir class="h_line"><hr></dir>
+		<div class="h_line"><hr></div>
 
 		<div class="first_col">Iron</div>
 		<div class="second_col">6%</div>
 		<div class="third_col">6%</div>
-		<dir class="h_line"><hr class="bold_hr"></dir>
+		<div class="h_line"><hr class="bold_hr"></div>
 
-
-
-
-	</div>
-	<div>
-		**Amount In Cereal. with 1/2 cup 1% milk contributes an additional 60 Calories (10 Calories from Fat), 1 g Total Fat (1 g Saturated Fat), 10 mg Cholesterol, 70 mg Sodium, 7 g Total Carbonhydrate (6g Sugars), 5 g Protein.
+		<div class="amout">
+			**Amount In Cereal. with 1/2 cup 1% milk contributes an additional 60 Calories (10 Calories from Fat), 1 g Total Fat (1 g Saturated Fat), 10 mg Cholesterol, 70 mg Sodium, 7 g Total Carbonhydrate (6g Sugars), 5 g Protein.
 		**Percent Daily Values are based on a 2.000 calorie diet.
 		Your daily values may be higher or lower depending on your calorie needs:
-	</div>
-	<div>
+		</div>
+
+		<div class="nutrition_table">
 		Calories: 2.000 2.500
 		<br>
 		Total Fat Less than 65g 80g
@@ -128,6 +122,7 @@
 		Calories per gram:
 		<br>
 		Fat 9 Carbonhydrate 4 Protein 4
+		</div>
 	</div>
 </body>
 </html>
