--- a/nutrition_facts.html
+++ b/nutrition_facts.html
@@ -18,6 +18,7 @@
 		<div id="title1" class="second_col"><br><br>Cereal</div>
 		<div id="title1" class="third_col">with 1/2<br>cup 1%<br>milk</div>
 		<div class="h_line"><hr></div>
+
 		<div class="first_col">Calories</div>
 		<div class="second_col">190</div>
 		<div class="third_col">250</div>
@@ -28,9 +29,7 @@
 		<div class="third_col">45</div>
 		<div class="h_line"><hr class="medium_hr"></div>
 
-
 		<div class="first_col"></div>
-	
 		<div id="title2" class="third_col">%Daily Value**</div>	
 		<div class="h_line"><hr></div>
 
@@ -98,30 +97,51 @@
 		<div class="third_col">6%</div>
 		<div class="h_line"><hr class="bold_hr"></div>
 
-		<div class="amout">
-			**Amount In Cereal. with 1/2 cup 1% milk contributes an additional 60 Calories (10 Calories from Fat), 1 g Total Fat (1 g Saturated Fat), 10 mg Cholesterol, 70 mg Sodium, 7 g Total Carbonhydrate (6g Sugars), 5 g Protein.
-		**Percent Daily Values are based on a 2.000 calorie diet.
-		Your daily values may be higher or lower depending on your calorie needs:
+		<div id="side_notes">
+			*Amount In Cereal. with 1/2 cup 1% milk contributes an additional 60 Calories (10 Calories from Fat), 1 g Total Fat (1 g Saturated Fat), 10 mg Cholesterol, 70 mg Sodium, 7 g Total Carbonhydrate (6g Sugars), 5 g Protein.<br>
+			**Percent Daily Values are based on a 2.000 calorie diet.
+			Your daily values may be higher or lower depending on your calorie needs:
 		</div>
 
 		<div class="nutrition_table">
-		Calories: 2.000 2.500
-		<br>
-		Total Fat Less than 65g 80g
-		<br>
-		Saturated Fat Less Man 20g 25g
-		<br>
-		Cholesterol Less than 300mg 300mg
-		<br>
-		Sodium Less than 2.400mg 2.400mg
-		<br>
-		Total Carbonhydrate 300g 375g
-		<br>
-		Dietary Fiber 25g 30g
-		<br>
-		Calories per gram:
-		<br>
-		Fat 9 Carbonhydrate 4 Protein 4
+			<div></div>
+			<div>Calories:</div>
+			<div>2.000</div>
+			<div>2.500</div>
+		
+		<div>Total Fat</div>
+		<div>Less than</div>
+		<div>65g</div>
+		<div>80g</div>
+		
+		<div>Saturated Fat</div>
+		<div>Less than</div>
+		<div>20g</div>
+		<div>25g</div>
+		
+		<div>Cholesterol</div>
+		<div>Less than</div>
+		<div>300mg</div>
+		<div>300mg</div>
+		
+		<div>Sodium</div>
+		<div>Less than</div>
+		<div>2.400mg</div>
+		<div>2.400mg</div>
+		
+		<div>Total Carbonhydrate</div>
+		<div>300g</div>
+		<div>375g</div>
+		
+		<div>Dietary Fiber</div>
+		<div></div>
+		<div>25g</div>
+		<div>30g</div>
+		
+		<div>Calories per gram:</div>
+		
+		<div>Fat 9 Carbonhydrate 4 Protein 4</div>
+		
 		</div>
 	</div>
 </body>
